Fixes
Thanks to @sofian for finding the reason why my project wouldn’t scale
down to 320px on Firefox (flex: 1 on main container). Also, made a
change to the toggle switch label width which was slightly too long for
the charts breakpoint. Finally, adjusted the font weight down on the
message sent and message error notification.

--- a/css/application.css
+++ b/css/application.css
@@ -367,7 +367,6 @@ nav {
 
 /* line 7, ../scss/layout/_main.scss */
 main {
-  flex: 1;
   width: 100%;
   background: #f5f2e6;
   transform: translateX(0);
@@ -650,7 +649,7 @@ canvas.chart {
 .message-sent, .message-error {
   height: 50px;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 300;
   color: #f5f5f5;
   line-height: 1.2;
   border-radius: 4px;
@@ -665,7 +664,7 @@ canvas.chart {
 
 /* line 44, ../scss/layout/_forms.scss */
 #settings-form p {
-  width: 200px;
+  width: 190px;
   font-weight: 500; }
 /* line 49, ../scss/layout/_forms.scss */
 #settings-form button {
