--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -5,7 +5,7 @@
 //-------------- Main -------------
 
 main {
-  flex: 1;
+//  flex: 1;
   width: 100%;
   background: $color-background;
   transform: translateX(0);
